--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "browser-sync": "^2.26.7",
     "core-js": "^3.4.2",
     "gulp": "^4.0.2",
+    "sass": "^1.54.9",
     "webpack": "^4.41.2",
     "webpack-stream": "^5.2.1"
   }
